--- a/navbar.css
+++ b/navbar.css
@@ -11,7 +11,6 @@
   height: 812px;
   background: #3c3a39;
   mix-blend-mode: normal;
-  box-shadow: 0px 48px 48px rgba(37, 47, 137, 0.08);
 }
 
 .manu-lists {
@@ -56,19 +55,17 @@
 }
 
 .footer-section {
-    width: 375px;
-    height: 57px;
-    background: #E5E5E5;
+  width: 375px;
+  height: 57px;
+  background: #e5e5e5;
 }
 
 .footer-img {
-    width: 115px;
-    height: 1px;
-   padding-bottom: 90px;
-background-image: url(img/Shape-999.png);
-background-size: contain;
-background-repeat: no-repeat;
-background-position: center;
-
-
+  width: 115px;
+  height: 1px;
+  padding-bottom: 90px;
+  background-image: url(img/Shape-999.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
