--- a/style.css
+++ b/style.css
@@ -238,6 +238,10 @@
   padding-left: 14px;
 }
 
+ul {
+  list-style: none;
+}
+
 .work-card-buttons ul {
   width: 327px;
   display: flex;
@@ -367,7 +371,8 @@
   flex-wrap: wrap;
   align-items: center;
   width: 327px;
-  background: linear-gradient(
+  background: 
+    linear-gradient(
       180.45deg,
       rgba(38, 38, 38, 0) 0.75%,
       rgba(38, 38, 38, 0.9) 61.94%
@@ -475,7 +480,7 @@
 .card-about-text p {
   width: 327px;
   margin-left: 18px;
-  margin-bottom: 12px;
+  margin-bottom: 50px;
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: lighter;
@@ -483,6 +488,7 @@
   line-height: 24px;
   color: #f4f5f7;
   flex: none;
+  align-self: flex-start;
   order: 1;
   flex-grow: 0;
 }
@@ -526,10 +532,6 @@
 }
 
 /* == cantact part start == */
-
-ul {
-  list-style: none;
-}
 
 .contact-form-container {
   margin: 0 auto;
@@ -625,7 +627,7 @@ textarea {
 
 /* == footer section == */
 
-footer-part {
+footer {
   margin: 0 auto;
   height: 81px;
   margin-top: 124px;
@@ -653,22 +655,6 @@ footer-part {
   margin: 0 auto;
   height: 81px;
   margin-bottom: 8px;
-}
-
-.top-line-footer {
-  margin: 0 auto;
-  width: 375px;
-  height: 1px;
-  margin-bottom: 15px;
-  border: 0.1px solid #dfe1e6;
-}
-
-.social_navigation-footer {
-  width: 200px;
-  height: 40px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
 }
 
 .liner-footer {
