--- a/style.css
+++ b/style.css
@@ -538,6 +538,7 @@ ul {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   width: 375px;
   text-align: center;
 }
@@ -546,7 +547,7 @@ ul {
   width: 327px;
   height: 216px;
   margin-top: 120px;
-  margin-bottom: 58px;
+  margin-bottom: 80px;
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -557,10 +558,11 @@ ul {
 }
 
 form input {
-  height: 48px;
+  height: 24px;
+  margin-bottom: 39px;
+  padding-bottom: 14px;
+  padding-left: 16px;
   width: 327px;
-  margin: 24px 0;
-  padding: 16px;
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -585,6 +587,8 @@ textarea {
   width: 327px;
   height: 114px;
   margin-bottom: 24px;
+  margin-top: -12px;
+  padding-top: 36px;
   padding: 12px;
   background-color: #fbf8f7;
   font-family: "Inter", sans-serif;
@@ -602,7 +606,7 @@ textarea {
   color: white;
   width: 181px;
   height: 48px;
-  font-family: Inter, sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
@@ -631,13 +635,13 @@ textarea {
 footer {
   margin: 0 auto;
   height: 81px;
-  margin-top: 124px;
+  margin-top: 28px;
   margin-bottom: 8px;
 }
 
 .top-line-footer {
   margin: 0 auto;
-  width: 375px;
+  width: 325px;
   height: 1px;
   margin-bottom: 15px;
   border: 0.1px solid #dfe1e6;
