--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
 }
+
 :root {
   --color-white: rgb(255, 255, 255);
   --color-orange: #ff6b00;
@@ -288,6 +289,11 @@
     align-self: flex-start;
   }
 
+  .pro-buttons li a {
+    color: white;
+    text-decoration: none;
+  }
+
   .card-about-button:hover {
     padding: 12px 12px 12px 12px;
     text-decoration: none;
@@ -375,15 +381,6 @@
   }
 
   /* == professional section start == */
-
-  .card2 {
-    margin-bottom: 24px;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr) / 1;
-    flex-wrap: wrap;
-    place-items: center;
-    width: 375px;
-  }
 
   .card2 {
     display: flex;
@@ -583,6 +580,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    list-style: none;
   }
 
   form input {
@@ -600,6 +598,7 @@
     color: #979493;
     border-style: none;
     border-bottom: 1px solid #dbd8d7;
+    list-style: none;
   }
 
   #name,
@@ -700,9 +699,9 @@
   }
 }
 
-/*=======================================
-desktop version style using media query
-=========================================*/
+ /*=======================================
+ desktop version style using media query
+ =========================================*/
 
 @media screen and (min-width: 768px) {
   body {
@@ -722,12 +721,13 @@ desktop version style using media query
     margin-left: 154px;
     color: white;
   }
+
   .logo a {
     color: white;
     text-decoration: none;
     width: 92px;
     height: 20px;
-    font-family: "Inter";
+    font-family: "Inter", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
@@ -743,13 +743,24 @@ desktop version style using media query
     list-style: none;
   }
 
+  .card-about-button a {
+    width: 100px;
+    height: 24px;
+    color: #fff;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 24px;
+  }
+
   .navbar-ul li a {
     color: #fff;
     margin-left: 26px;
     text-decoration: none;
     width: 63px;
     height: 20px;
-    font-family: "Inter";
+    font-family: "Inter", sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 15px;
@@ -848,10 +859,9 @@ desktop version style using media query
     margin-top: 26px;
   }
 
-  /* ==============================
-          work section start
+  /*==============================
+  work section start
   ================================*/
-
   .card-content {
     display: flex;
     flex-direction: column;
@@ -871,7 +881,7 @@ desktop version style using media query
 
   .card-header {
     width: 515px;
-    font-family: "Crete Round";
+    font-family: "Crete Round", serif;
     font-style: normal;
     font-weight: 400;
     font-size: 40px;
@@ -921,7 +931,7 @@ desktop version style using media query
   .card-subtitle {
     width: 548px;
     margin-left: 24px;
-    font-family: "Crete Round";
+    font-family: "Crete Round", serif;
     font-style: normal;
     font-weight: 400;
     font-size: 40px;
@@ -930,9 +940,8 @@ desktop version style using media query
 
   .card-text {
     width: 448px;
-    /* height: 140px; */
     margin-left: 24px;
-    font-family: "Inter";
+    font-family: "Inter", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
@@ -995,37 +1004,57 @@ desktop version style using media query
     color: #f55800;
   }
 
-  .work-text button:hover {
-    background: #fff5e1;
-    color: #f55800;
-  }
-
-  .card-about-button a {
-    width: 100px;
-    height: 24px;
-    color: #fff;
-    font-family: "Inter";
+  .form-input button {
+    padding: 12px;
+    background: #ff6b00;
+    color: white;
+    width: 181px;
+    height: 48px;
+    font-family: "Inter", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 17px;
     line-height: 24px;
-  }
-  .card-about-button a:hover {
-    width: 100px;
-    height: 24px;
-    color: #f55800;
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 700;
-    font-size: 17px;
-    line-height: 24px;
+    cursor: pointer;
+    margin-bottom: 124px;
   }
 
   .work-text button {
     color: #fff;
   }
 
-  /* ==================
+  .work-text button:hover {
+    background: #fff5e1;
+    color: #f55800;
+  }
+
+  .social_navigation-footer li a {
+    margin-right: 20px;
+  }
+
+  .skill-group li a {
+    text-decoration: none;
+    width: 114px;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 43px;
+    color: #fff;
+  }
+
+  .card-about-button a:hover {
+    width: 100px;
+    height: 24px;
+    color: #f55800;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 24px;
+  }
+
+   /* ==================
 professional part start 
 ======================*/
 
@@ -1033,7 +1062,6 @@ professional part start
     margin: 0 auto;
     display: grid;
     place-items: center;
-    margin-top: 24px;
     width: 75vw;
     margin: 24px 143px 130px 143px;
   }
@@ -1066,10 +1094,8 @@ professional part start
   .work-button .card-about-button {
     width: 327px;
     height: 58px;
-    
     color: white;
     background: #f55800;
-    
   }
 
   .work-button .card-about-button:hover {
@@ -1178,7 +1204,7 @@ professional part start
     margin-left: 18px;
     width: 337px;
     color: #fff;
-    font-family: "Crete Round";
+    font-family: "Crete Round", serif;
     font-style: normal;
     font-weight: 400;
     font-size: 32px;
@@ -1188,12 +1214,12 @@ professional part start
   .card-pro-text {
     width: 337px;
     margin-left: 18px;
-    font-family: "Inter";
+    font-family: "Inter", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 17px;
     line-height: 24px;
-    color: #ffffff;
+    color: #fff;
   }
 
   .professional-card-row-2 {
@@ -1211,6 +1237,7 @@ professional part start
     color: white;
     list-style: none;
     width: 369px;
+    padding-bottom: 12px;
   }
 
   .pro-buttons li {
@@ -1219,16 +1246,42 @@ professional part start
     padding: 10px 12px;
     background: rgba(255, 255, 255, 0.24);
     color: white;
+    align-self: flex-start;
+    margin-left: 24px;
   }
 
   .pro-buttons li a {
-    color: white;
     text-decoration: none;
+    color: #fff;
   }
 
-  /* =====================
-    about part start
-========================*/
+  .pro-card-button {
+    display: none;
+    width: 0;
+  }
+
+  .work-button-desk button{
+    width: 324px;
+    align-self: flex-start;
+    padding: 10px 12px;
+    color: white;
+    background: #f55800;
+    margin-right: 42px;
+  }
+
+  .work-button-desk button:hover {
+    width: 324px;
+    align-self: flex-start;
+    padding: 10px 12px;
+    background-color: #fff5e1;
+    border: 1px solid #ff6b00;
+    color: #f55800;
+    margin-right: 42px;
+  }
+
+  /*=====================
+  about part start
+  ========================*/
 
 .card-3 {
   
@@ -1250,7 +1303,7 @@ professional part start
     margin-left: 142px;
     margin-bottom: 24px;
     width: 566px;
-    font-family: "Crete Round";
+    font-family: "Crete Round", serif;
     font-style: normal;
     font-weight: 400;
     font-size: 72px;
@@ -1261,7 +1314,7 @@ professional part start
   .card-about-text p {
     width: 566px;
     margin-left: 142px;
-    font-family: "Inter";
+    font-family: "Inter", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
@@ -1292,7 +1345,6 @@ professional part start
     width: 950px;
     height: 1px;
     margin-top: 40px;
-    margin-bottom: 6px;
     background: #807975;
     margin-bottom: 24px;
   }
@@ -1329,8 +1381,8 @@ professional part start
   }
 
   /* ====================
-   skill part start   
-======================*/
+  skill part start   
+  ======================*/
 
   .skill {
     margin: 0 auto;
@@ -1346,7 +1398,7 @@ professional part start
   .card-skill h3 {
     color: #fff;
     width: 228px;
-    font-family: "Inter";
+    font-family: "Inter", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 32px;
@@ -1361,21 +1413,9 @@ professional part start
     align-items: center;
   }
 
-  .skill-group li a {
-    text-decoration: none;
-    color: #fff;
-    width: 114px;
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 22px;
-    line-height: 43px;
-    color: #ffffff;
-  }
-
   /* ====================
-   contact part start   
-======================*/
+  contact part start
+  ======================*/
 
   .contact-me {
     margin: 0 auto;
@@ -1407,6 +1447,7 @@ professional part start
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    list-style: none;
   }
 
   form input {
@@ -1424,9 +1465,6 @@ professional part start
     color: #979493;
     border-style: none;
     border-bottom: 1px solid #dbd8d7;
-  }
-
-  .form-input {
     list-style: none;
   }
 
@@ -1443,9 +1481,7 @@ professional part start
     width: 684px;
     height: 114px;
     margin-bottom: 24px;
-    margin-top: -12px;
-    padding-top: 36px;
-    padding: 12px;
+    padding-top: 36px 12px 12px 12px;
     background-color: #fbf8f7;
     font-family: "Inter", sans-serif;
     font-style: normal;
@@ -1454,21 +1490,6 @@ professional part start
     line-height: 24px;
     color: #3c3a39;
     border-style: none;
-  }
-
-  .form-input button {
-    padding: 12px;
-    background: #ff6b00;
-    color: white;
-    width: 181px;
-    height: 48px;
-    font-family: "Inter", sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 17px;
-    line-height: 24px;
-    cursor: pointer;
-    margin-bottom: 124px;
   }
 
   .form-input button:hover {
@@ -1486,10 +1507,9 @@ professional part start
     cursor: pointer;
   }
 
-  /* ====================
-   footer part start   
+/* ====================
+footer part start
 ======================*/
-
   .top-line-footer {
     margin: 0 auto;
     width: 1440px;
@@ -1514,10 +1534,6 @@ professional part start
     margin-right: 20px;
     margin-top: 24px;
     margin-bottom: 24px;
-  }
-
-  .social_navigation-footer li a {
-    margin-right: 20px;
   }
 
   .liner-footer {
