--- a/style.css
+++ b/style.css
@@ -263,6 +263,25 @@
     list-style: none;
   }
 
+  .work-button-mobile button {
+    width: 324px;
+    align-self: flex-start;
+    padding: 17px 12px;
+    color: white;
+    background-color: #ff6b00;
+    margin-right: 42px;
+  }
+
+  .work-button-mobile button:hover {
+    width: 324px;
+    align-self: flex-start;
+    padding: 17px 12px;
+    background-color: #fff5e1;
+    border: 1px solid #ff6b00;
+    color: #f55800;
+    margin-right: 42px;
+  }
+
   .work-card-buttons ul {
     width: 327px;
     display: flex;
@@ -289,6 +308,18 @@
     align-self: flex-start;
   }
 
+  .skillname a {
+    color: #fff;
+    text-decoration: none;
+    text-align: center;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 43px;
+    display: flex;
+  }
+
   .pro-buttons li a {
     color: white;
     text-decoration: none;
@@ -306,23 +337,6 @@
     background-color: #fff5e1;
     border: 1px solid #ff6b00;
     color: #f55800;
-  }
-
-  .contact-button-card a {
-    text-decoration: none;
-    color: white;
-  }
-
-  .skillname a {
-    color: #fff;
-    text-decoration: none;
-    text-align: center;
-    font-family: "Inter", sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 22px;
-    line-height: 43px;
-    display: flex;
   }
 
   .card-pro-buttons ul li a {
@@ -615,8 +629,7 @@
     height: 114px;
     margin-bottom: 24px;
     margin-top: -12px;
-    padding-top: 36px;
-    padding: 12px;
+    padding-top: 36px 12px;
     background-color: #fbf8f7;
     font-family: "Inter", sans-serif;
     font-style: normal;
@@ -655,6 +668,25 @@
     font-size: 17px;
     line-height: 24px;
     cursor: pointer;
+  }
+
+  .contact-last-button button{
+    width: 167px;
+    align-self: flex-start;
+    padding: 17px 12px;
+    color: white;
+    background: #f55800;
+    margin-right: 42px;
+  }
+
+  .contact-last-button button:hover{
+    width: 167px;
+    align-self: flex-start;
+    padding: 17px 12px;
+    background-color: #fff5e1;
+    border: 1px solid #ff6b00;
+    color: #f55800;
+    margin-right: 42px;
   }
 
   /* == footer section == */
@@ -698,10 +730,6 @@
     margin-top: -33px;
   }
 }
-
- /*=======================================
- desktop version style using media query
- =========================================*/
 
 @media screen and (min-width: 768px) {
   body {
@@ -859,9 +887,6 @@
     margin-top: 26px;
   }
 
-  /*==============================
-  work section start
-  ================================*/
   .card-content {
     display: flex;
     flex-direction: column;
@@ -871,6 +896,7 @@
     width: 100vw;
     padding-left: 40px;
   }
+
   .work-frist-row {
     display: flex;
     flex-direction: row;
@@ -974,7 +1000,7 @@
     border: 1px solid #d7dbe2;
     padding: 10px 12px;
     color: #091e42;
-    font-family: "Inter";
+    font-family: "Inter", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 15px;
@@ -1023,6 +1049,23 @@
     color: #fff;
   }
 
+  .work-button-desk button{
+    width: 324px;
+    align-self: flex-start;
+    padding: 17px 12px;
+    color: white;
+    background: #f55800;
+    margin-right: 42px;
+  }
+
+  .work-button button {
+    margin-left: 142px;
+    width: 161px;
+    margin-bottom: 40px;
+    color: white;
+    background: #f55800;
+  }
+
   .work-text button:hover {
     background: #fff5e1;
     color: #f55800;
@@ -1043,6 +1086,11 @@
     color: #fff;
   }
 
+  .pro-buttons li a {
+    text-decoration: none;
+    color: #fff;
+  }
+
   .card-about-button a:hover {
     width: 100px;
     height: 24px;
@@ -1054,17 +1102,13 @@
     line-height: 24px;
   }
 
-   /* ==================
-professional part start 
-======================*/
-
   .profession-group {
-    margin: 0 auto;
     display: grid;
     place-items: center;
     width: 75vw;
     margin: 24px 143px 130px 143px;
   }
+
   .professional-card-row-1 {
     display: flex;
     justify-content: center;
@@ -1101,8 +1145,6 @@ professional part start
   .work-button .card-about-button:hover {
     width: 327px;
     height: 58px;
-    left: 0px;
-    top: 0px;
     background-color: #fff5e1;
     border: 1px solid #ff6b00;
     color: #f55800;
@@ -1246,13 +1288,12 @@ professional part start
     padding: 10px 12px;
     background: rgba(255, 255, 255, 0.24);
     color: white;
-    align-self: flex-start;
     margin-left: 24px;
   }
 
-  .pro-buttons li a {
+  .contact-button-card a {
     text-decoration: none;
-    color: #fff;
+    color: white;
   }
 
   .pro-card-button {
@@ -1260,32 +1301,15 @@ professional part start
     width: 0;
   }
 
-  .work-button-desk button{
-    width: 324px;
-    align-self: flex-start;
-    padding: 10px 12px;
-    color: white;
-    background: #f55800;
-    margin-right: 42px;
-  }
-
   .work-button-desk button:hover {
     width: 324px;
     align-self: flex-start;
-    padding: 10px 12px;
+    padding: 17px 12px;
     background-color: #fff5e1;
     border: 1px solid #ff6b00;
     color: #f55800;
     margin-right: 42px;
   }
-
-  /*=====================
-  about part start
-  ========================*/
-
-.card-3 {
-  
-}
 
   .about-row {
     padding-top: 100px;
@@ -1321,14 +1345,6 @@ professional part start
     line-height: 32px;
     color: #f4f5f7;
     margin-bottom: 24px;
-  }
-
-  .work-button button {
-    margin-left: 142px;
-    width: 161px;
-    margin-bottom: 40px;
-    color: white;
-    background: #f55800;
   }
 
   .work-button button:hover {
@@ -1380,10 +1396,6 @@ professional part start
     align-self: flex-end;
   }
 
-  /* ====================
-  skill part start   
-  ======================*/
-
   .skill {
     margin: 0 auto;
     padding-top: 20px;
@@ -1413,10 +1425,6 @@ professional part start
     align-items: center;
   }
 
-  /* ====================
-  contact part start
-  ======================*/
-
   .contact-me {
     margin: 0 auto;
     display: flex;
@@ -1434,7 +1442,7 @@ professional part start
   .contact-text {
     width: 455px;
     margin-top: -50px;
-    font-family: "Inter";
+    font-family: "Inter", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 40px;
@@ -1507,16 +1515,10 @@ professional part start
     cursor: pointer;
   }
 
-/* ====================
-footer part start
-======================*/
   .top-line-footer {
     margin: 0 auto;
     width: 1440px;
     height: 1px;
-    left: 0px;
-    right: 0px;
-    top: 0px;
     background: #dfe1e6;
   }
 
