--- a/style.css
+++ b/style.css
@@ -882,7 +882,7 @@
 
   .main-img {
     height: 633px;
-    width: 645px;
+    width: 25%;
     background: #1c1a19;
     background-image: url(img/Group99.svg);
     background-repeat: no-repeat;
