--- a/style.css
+++ b/style.css
@@ -425,7 +425,9 @@
     flex-wrap: wrap;
     align-items: center;
     width: 327px;
-    background: linear-gradient(
+    background:
+
+      linear-gradient(
         180.45deg,
         rgba(38, 38, 38, 0) 0.75%,
         rgba(38, 38, 38, 0.9) 61.94%
@@ -1103,6 +1105,18 @@
     color: #fff;
   }
 
+  .social_navigation-footer li {
+    margin-right: 20px;
+    margin-top: 24px;
+    margin-bottom: 24px;
+  }
+
+  .card-skill ul li a {
+    text-decoration: none;
+    color: white;
+    text-align: center;
+  }
+
   .card-about-button a:hover {
     width: 100px;
     height: 24px;
@@ -1137,12 +1151,14 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(
+    background:
+
+      linear-gradient(
         180.45deg,
         rgba(38, 38, 38, 0) 0.75%,
         rgba(38, 38, 38, 0.9) 61.94%
       ),
-      url(img/Img\ Placeholder41.png);
+    url(img/Img\ Placeholder41.png);
   }
 
   .work-button .card-about-button {
@@ -1169,12 +1185,14 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(
+    background:
+
+    linear-gradient(
         179.35deg,
         rgba(38, 38, 38, 0) 0.85%,
         rgba(38, 38, 38, 0.9) 84%
       ),
-      url(img/Img\ Placeholder42.png);
+    url(img/Img\ Placeholder42.png);
   }
 
   .card2.professional-card-3 {
@@ -1185,12 +1203,14 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(
+    background:
+
+      linear-gradient(
         179.4deg,
         rgba(38, 38, 38, 0) 0.81%,
         rgba(38, 38, 38, 0.9) 84.03%
       ),
-      url(img/Img\ Placeholder43.png);
+    url(img/Img\ Placeholder43.png);
   }
 
   .card2.professional-card-4 {
@@ -1201,12 +1221,14 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(
+    background:
+
+      linear-gradient(
         180.45deg,
         rgba(38, 38, 38, 0) 0.75%,
         rgba(38, 38, 38, 0.9) 61.94%
       ),
-      url(img/Img\ Placeholder45.png);
+    url(img/Img\ Placeholder45.png);
   }
 
   .card2.professional-card-5 {
@@ -1217,12 +1239,14 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(
+    background:
+
+      linear-gradient(
         180.45deg,
         rgba(38, 38, 38, 0) 0.75%,
         rgba(38, 38, 38, 0.9) 84.18%
       ),
-      url(img/Img\ Placeholder41.png);
+    url(img/Img\ Placeholder41.png);
   }
 
   .card2.professional-card-6 {
@@ -1233,12 +1257,14 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(
+    background:
+
+      linear-gradient(
         179.4deg,
         rgba(38, 38, 38, 0) 0.81%,
         rgba(38, 38, 38, 0.9) 84.03%
       ),
-      url(img/Img\ Placeholder43.png);
+    url(img/Img\ Placeholder43.png);
   }
 
   .card-title {
@@ -1419,14 +1445,7 @@
   .card-skill ul li {
     margin-top: 12px;
     padding-top: 12px;
-    margin: 0 auto;
     margin-left: 26px;
-  }
-
-  .card-skill ul li a {
-    text-decoration: none;
-    color: white;
-    text-align: center;
   }
 
   .card-skill h3 {
@@ -1552,12 +1571,6 @@
     align-self: center;
     width: 75vw;
     list-style: none;
-  }
-
-  .social_navigation-footer li {
-    margin-right: 20px;
-    margin-top: 24px;
-    margin-bottom: 24px;
   }
 
   .liner-footer {
